@@ -4,6 +4,8 @@
 
 --------------------------------------------------------------------------
   v.3.6-Alpha1
+        - Sort malformed files into "Unknown (Broken)" rather then leaving
+                them in "Unknown (Orphaned)"
 	- Fix API democratic voting methods (Thx kindachris)
 	- Add server version to API ping response
 	- Fix Localplay API methods (Thx thomasa) 
